fix social-container div center align. fixing avatar

--- a/src/app/components/user-card-item/user-card-item.component.scss
+++ b/src/app/components/user-card-item/user-card-item.component.scss
@@ -1,8 +1,13 @@
+.social-container {
+  display: flex;
+  justify-content: center;
+}
+
 .example-card {
   max-width: 400px;
 }
 
 .example-header-image {
-  background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
+  background-image: url("https://img.fullcontact.com/static/67f018e3dca815c2022d289503b8262c_2b6d07f95f4e6541e996e03f6aab4cdf5cddee8c313cf6d5319766424d1e29df");
   background-size: cover;
 }
